<package format="2">
	<name>moveit_debug</name>
	<version>0.0.0</version>
	<description>Minimal examples for debugginf MoveIt</description>

	<license>BSD</license>
	<maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>geometric_shapes</depend>
	<depend>geometry_msgs</depend>
	<depend>eigen_conversions</depend>
	<depend>roscpp</depend>
	<depend>moveit_core</depend>
	<depend>moveit_ros_planning</depend>
	<depend>moveit_ros_planning_interface</depend>
	<depend>visualization_msgs</depend>
	<depend>moveit_visual_tools</depend>
	<depend>urdf</depend>
</package>
